test/fixtures/diagnostics/type-checker/negative/enum-underlying-type-invalid/input.tysh
namespace Samples.TypeChecker.EnumUnderlyingTypeInvalid

enum Color : string {
  Red = 1
}
